# agentix

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  agentix-platform-architecture-v2.html  mypy.ini  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml
agentix/agent_runtime/: context_builder.py  context_compactor.py  llm_client.py  loader.py  main.py  output_handler.py  tool_executor.py
agentix/api/: __init__.py  app.py  deps.py
agentix/api/routers/: agents.py  audit.py  auth.py  chat.py  connectors.py  health.py  metrics.py  skills.py  (+2 more)
agentix/cli/: main.py
agentix/compliance/: __init__.py  gdpr.py  pii.py  retention.py  soc2.py
agentix/connectors/: __init__.py  base.py  catalog.py  engine.py  registry.py
agentix/llm/: __init__.py  base.py  router.py
agentix/memory/: vector_store.py
agentix/observability/: cost_ledger.py  tracing.py
agentix/orchestration/: durable_bus.py  patterns.py
agentix/proto/: __init__.py  trigger.proto
agentix/scheduler/: engine.py  loader.py
agentix/security/: audit.py  rbac.py  secrets.py  skill_rbac.py
agentix/skills/: engine.py  marketplace.py  skillhub.py
agentix/storage/: standard.py  state_store.py  tenant.py
agentix/testing/: __init__.py  assertions.py  fixtures.py  harness.py  mock_llm.py
agentix/watchdog/: agent_spawner.py  auth.py  config.py  main.py  rbac_gateway.py  trigger_normalizer.py
agents/: email-agent.yaml  news-digest-agent.yaml  research-assistant.yaml  telegram-agent.yaml  trading-agent.yaml  whatsapp-agent.yaml
agents/sales-agent/: agent.yaml
config/: policy.yaml  watchdog.yaml
connectors/: github.yaml  google.yaml  jira.yaml  notion.yaml  slack.yaml  webhook.yaml
deploy/argocd/: agent-promotion.yaml  application.yaml
deploy/k8s/: agent-job-template.yaml  keda-scaledobject.yaml  namespace.yaml  services.yaml  watchdog-deployment.yaml
deploy/terraform/: main.tf
docs/: privacy.md  setup-guide.md
schedules/: market-evening.yaml  market-morning.yaml  morning-news.yaml  nightly-etl.yaml  weekly-report.yaml
tests/: test_agent_harness.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
(+69 files in other folders)
