[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentix"
version = "0.1.0"
description = "Serverless Agentic Platform — Zero-Idle, Event-Driven, Secure by Default"
requires-python = ">=3.11"
dependencies = [
    # Watchdog / HTTP
    "aiohttp>=3.9",
    # Slack
    "slack-bolt>=1.18",
    # JWT auth
    "pyjwt>=2.8",
    # YAML config
    "pyyaml>=6.0",
    # LLM client
    "anthropic>=0.25",
    # CLI
    "click>=8.1",
    # Utilities
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "black", "ruff", "mypy>=1.8", "types-PyYAML"]

[project.scripts]
agentix = "agentix.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentix*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
